tests/func/parsing/error_reporting/test_parsing_errors_invalid_input.err
1:6: syntax error: unexpected token +
    1 | id+id*+id
      |       ^^^ expected: ( id